--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
 <body>
   <div>
     <h1>Moons of Mars</h1>
-    <div>
-      <div>
+    <div class="grid">
+      <div class="unit xs-1 s-1">
         <img class="img-flex" src="images/deimos.jpg" alt="">
       </div>
-      <div>
+      <div class="unit xs-1 s-1">
         <h2>Deimos</h2>
         <p>Deimos is the smaller and outer of the two natural satellites of the planet Mars. With a mean radius of 6.2 km it takes 30.3 hours to orbit Mars.</p>
         <dl>
@@ -28,7 +28,7 @@
       </div>
     </div>
     <div>
-      <div>
+      <div class="unit xs-1 s-1">
         <img class="img-flex" src="images/phobos.jpg" alt="">
       </div>
       <div>
